--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,6 @@ Flask-Testing==0.8.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
+python-decouple==3.8
+python-dotenv==1.0.0
 Werkzeug==3.0.0
