changed test report implementation

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Run tests and generate XML report
         run: |
-          python -m pytest --junitxml=test-reports/test-results.xml
+          python -m pytest -k test.py --junitxml=test-reports/test-results.xml
 
       - name: Upload test report
         uses: actions/upload-artifact@v2
